app/styles/layout/main.scss
.dashboard-avatar {
  text-align: center;
}

.dashboard-avatar img {
  display: block;
  margin: 0 auto;
  border-radius: 80px;
  display: inline-block;
}
.dashboard-avatar .avatar-name {
  padding: 15px 0;
  text-align: center;
  width: 100%;
  display: block;
  vertical-align: middle;
}
.side-nav {
  border-right: 1px solid #CCC;
  padding: 0;
  min-width: 65px;
  position: fixed;
  min-height: 100%;
  background-color: #fff;
  overflow-y: auto;
}

.body-container {
  margin: 0;
  padding-left: 15px;
  padding-top: 60px;
  @media (max-width: 768px) {
    padding-top: 54px;
  }
  @media (max-width: 650px) {
    padding-top: 54px;
  }
  @media (max-width: 450px) {
    padding-top: 52px;
  }
}

.dashboard-nav .list-group-item {
  border-radius: 0;
  border: none;
  background-color: #fff;
  padding-left: 20px;
  color: #000;
  &.active, &:hover {
    background-color: whitesmoke;
    color: $primary-color;
  }
  &.active {
    border-bottom: none;
    border-left: 3px solid $primary-color;
  }
}

.dashboard-nav .list-group-item span {
  padding-left: 10px;
  font-size: 1.2em;
}

.dashboard-avatar {
  padding: 20px 0;
  background-color: #FFF;
  text-align: center;

  .image-container {
    position: relative;
    width: 160px;
    height: 160px;
    display: inline-block;

    img.image {
      width: 160px;
      height: 160px;
      border-radius: 100px;
    }

    .after {
      position: absolute;
      top: 0;
      left: 0;
      width: 101%;
      height: 101%;
      display: none;
      color: #fff;
      border-radius: 100px;

      .change-photo-link {
        top: 45%;
        left: 20%;
        color: #FFF;
        position: absolute;
      }
    }

    &:hover {
      .after {
        display: block;
        background: rgba(0, 0, 0, 0.6);
      }
    }
  }
}

.fa-2 {
  font-size: 1.6em;
}

.dashboard-nav {
  border-radius: 0;
}

.wrapper-main {
  overflow-x: hidden;
}

.main-content {
  margin-top: 60px;
  padding-right: 30px;
  z-index: 1;
  overflow-x: hidden;
}

@media (max-width: 991px) {
  .side-nav {
    max-width: 65px;
  }

  .title-bar {
    margin-left: 65px;
  }
}

@media (max-width: 650px) {
  .side-nav {
    min-width: 45px;
    max-width: 45px;
  }
  .dashboard-nav .list-group-item {
    padding-left: 12px;
  }
  .title-bar {
    margin-left: 45px;
  }
}

.animate-sidebar {
  -webkit-transition: all .6s ease-out;
  -moz-transition: all .6s ease-out;
  -o-transition: all .6s ease-out;
  transition: all .6s ease-out;
}

.sidebar-hidden {
  margin-left: -350px;
}

